use bigquery in qmd

--- a/report_template.qmd
+++ b/report_template.qmd
@@ -14,34 +14,25 @@ library(DBI)
 library(bigrquery)
 library(glue)
 
-n_row <- as.numeric(params$n_row)
 
-n <- if (n_row > nrow(mtcars)) {
-    nrow(mtcars)
-} else {
-    n_row
-}
+ n <- min(c(344, n_row))
+ proj <- "ee-proj-123"
+ ds <- "penguins_data"
+ tbl <- "penguins"
 
-head(mtcars, n)
+ con <- dbConnect(
+     bigrquery::bigquery(),
+     project = "ee-proj-123",
+     dataset = "penguins_data"
+ )
 
-# n <- min(c(344, n_row))
-# proj <- "ee-proj-123"
-# ds <- "penguins_data"
-# tbl <- "penguins"
+ q <- glue_sql("
+     SELECT *
+     FROM `ee-proj-123.penguins_data.penguins`
+     LIMIT {n}
+ ")
 
-# con <- dbConnect(
-#     bigrquery::bigquery(),
-#     project = "ee-proj-123",
-#     dataset = "penguins_data"
-# )
+ res <- dbGetQuery(con, q)
 
-# q <- glue_sql("
-#     SELECT *
-#     FROM `ee-proj-123.penguins_data.penguins`
-#     LIMIT {n}
-# ")
-
-# res <- dbGetQuery(con, q)
-
-# res
+ res 
 ```
