--- a/report_template.qmd
+++ b/report_template.qmd
@@ -30,7 +30,7 @@ library(glue)
      SELECT *
      FROM `ee-proj-123.penguins_data.penguins`
      LIMIT {n}
- ")
+ ", .con = con)
 
  res <- dbGetQuery(con, q)
 
