fix param string issue

--- a/report_template.qmd
+++ b/report_template.qmd
@@ -15,7 +15,7 @@ library(bigrquery)
 library(glue)
 
 
- n <- min(c(344, params$n_row))
+ n <- min(c(344, as.numeric(params$n_row)))
  proj <- "ee-proj-123"
  ds <- "penguins_data"
  tbl <- "penguins"
@@ -28,7 +28,7 @@ library(glue)
 
  q <- glue_sql("
      SELECT *
-     FROM `ee-proj-123.penguins_data.penguins`
+     FROM `[ee-proj-123].[penguins_data].[penguins]`
      LIMIT {n}
  ", .con = con)
 
