--- a/report_template.qmd
+++ b/report_template.qmd
@@ -16,7 +16,7 @@ library(glue)
 
 
  n <- min(c(344, as.numeric(params$n_row)))
- proj <- "ee-proj-123"
+ proj <- "MY-PROJECT"
  ds <- "penguins_data"
  tbl <- "penguins"
 
@@ -28,7 +28,7 @@ library(glue)
 
  q <- glue_sql("
      SELECT *
-     FROM `ee-proj-123.penguins_data.penguins`
+     FROM `MY-PROJECT.penguins_data.penguins`
      LIMIT {n}
  ", .con = con)
 
